@Task-8 : Local Chat App : Completed (Fixed the chat appearance issue (wrong side and wrong color) on initial login and Made the website Responsive)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 body {
     background-color: white;
-    height: 100%;
-    background-repeat: no-repeat;
+    height: 100vh;
+}
+
+main {
+    height: 100vh;
+}
+
+.login-container {
+    background-color: #85909a;
+    width: fit-content;
+    padding: 0 20px 30px 20px;
+    margin: auto;
+    border: 1px solid black;
+    border-radius: 1rem;
 }
 
 button:active {
@@ -14,6 +26,9 @@ button:active {
 
 .nav {
     background-color: cadetblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .user-nav {
@@ -24,7 +39,8 @@ button:active {
 .person-selector {
     flex-direction: column;
     justify-content: center;
-    height: 418px;
+    max-height: 418px; 
+    flex-grow: 1;
     overflow: auto;
 }
 
@@ -74,7 +90,7 @@ button:active {
 
 .chathead-clrchat{
     background-color: cadetblue;
-
+    height: 63.04px;
 }
 
 .chatting h2 {
@@ -97,6 +113,7 @@ button:active {
 
 .logout-container {
     width: 100%;
+    height: 59px;
     border-top: 2px solid rgba(0, 0, 0, 0.5);
     margin-top: 5px;
 }
@@ -171,4 +188,32 @@ button:active {
 .send-button {
     font-size: 1em;
     padding: 0.625em 0.825em;
+}
+
+
+
+
+
+@media (max-width: 620px) {
+    .chatting h2 {
+        font-size: 1em;
+    }
+    .clear-chat-button {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 768px) {
+    .chat-container {
+        display: block;
+    }
+
+    .nav, .second-box {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    /* .chat-input-form {
+        flex-wrap: wrap;
+    } */
 }
